1. Removed not needed columns 2. Attempt to read template file from jar file